Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -158,16 +158,23 @@
                 </div>
 
                 <!-- Group 2: mol・化学反応 -->
-                <div class="md:col-start-2 md:col-span-5 mt-16 animate-on-scroll slide-from-right">
+                <div class="md:col-span-4 animate-on-scroll slide-from-left-diag">
                     <a href="mol.html" class="topic-card">
-                        <h3 class="text-2xl font-bold text-amber-300 mb-3 text-center">molについて</h3>
+                        <h3 class="text-2xl font-bold text-sky-300 mb-3 text-center">molについて</h3>
                         <p class="text-slate-400">高校化学の一番の山場！目に見えない粒子の数を扱うための魔法の単位「モル」をマスターします。</p>
                     </a>
                 </div>
 
-                <div class="md:col-start-7 md:col-span-5 mt-16 animate-on-scroll slide-from-left">
+                <div class="md:col-start-9 md:col-span-4 animate-on-scroll slide-from-right-diag">
+                    <a href="concentration.html" class="topic-card">
+                        <h3 class="text-2xl font-bold text-teal-300 mb-3 text-center">濃度について</h3>
+                        <p class="text-slate-400">高校からのモル濃度についてマスターします</p>
+                    </a>
+                </div>
+
+                <div class="md:col-start-5 md:col-span-4 mt-0 md:-mt-24 animate-on-scroll slide-from-left">
                     <a href="#" class="topic-card">
-                        <h3 class="text-2xl font-bold text-orange-300 mb-3 text-center">化学反応式</h3>
+                        <h3 class="text-2xl font-bold text-emerald-300 mb-3 text-center">化学反応式</h3>
                         <p class="text-slate-400">化学変化を記述するための言語。式の立て方から量的な関係まで、徹底解説します。</p>
                     </a>
                 </div>
@@ -379,6 +386,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
