--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
 
                 <!-- Group 2: mol・化学反応 -->
-                <div class="md:col-span-4 animate-on-scroll slide-from-left-diag md:mt-32">
+                <div class="md:col-start-1 md:col-span-4 animate-on-scroll slide-from-left-diag md:mt-32">
                     <a href="mol.html" class="topic-card">
                         <h3 class="text-2xl font-bold text-sky-300 mb-3 text-center">molについて</h3>
                         <p class="text-slate-400">高校化学の一番の山場！目に見えない粒子の数を扱うための魔法の単位「モル」をマスターします。</p>
@@ -172,7 +172,7 @@
                     </a>
                 </div>
 
-                <div class="md:col-start-5 md:col-span-4 mt-0 md:-mt-24 animate-on-scroll slide-from-left md:mt-32">
+                <div class="md:col-start-5 md:col-span-4 mt-0 md:-mt-24 animate-on-scroll slide-from-left">
                     <a href="#" class="topic-card">
                         <h3 class="text-2xl font-bold text-emerald-300 mb-3 text-center">化学反応式</h3>
                         <p class="text-slate-400">化学変化を記述するための言語。式の立て方から量的な関係まで、徹底解説します。</p>
@@ -386,6 +386,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
