--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
                 </div>
 
                 <!-- Group 2: mol・化学反応 -->
-                <div class="md:col-start-1 md:col-span-4 animate-on-scroll slide-from-left-diag md:mt-32">
+                <div class="md:col-start-1 md:col-span-4 animate-on-scroll slide-from-left-diag">
                     <a href="mol.html" class="topic-card">
                         <h3 class="text-2xl font-bold text-sky-300 mb-3 text-center">molについて</h3>
                         <p class="text-slate-400">高校化学の一番の山場！目に見えない粒子の数を扱うための魔法の単位「モル」をマスターします。</p>
                     </a>
                 </div>
 
-                <div class="md:col-start-9 md:col-span-4 animate-on-scroll slide-from-right-diag md:mt-32">
+                <div class="md:col-start-9 md:col-span-4 animate-on-scroll slide-from-right-diag">
                     <a href="concentration.html" class="topic-card">
                         <h3 class="text-2xl font-bold text-teal-300 mb-3 text-center">濃度について</h3>
                         <p class="text-slate-400">高校からのモル濃度についてマスターします</p>
@@ -386,6 +386,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
